galette/templates/default/galette.css
/* ... */
/* =/ Main menu */

/*
 * == Footer
 */
footer {
	text-align: center;
	padding-top: 10px;
	margin-bottom: 10px;
}

footer h4{
    font-size: 1em;
    margin: 0em 0 .2em;
    display:inline-block;
}

footer ul{
    margin:0;
}

footer li {
    display:inline-block;
    padding: .1em .2em;
    margin:0 .2em;
}

#copyright {
	color: #CCCCCC;
	font-style: italic;
}

#copyright:hover {
	color: #FF0000;
}
/* =/ Footer */

/* == Main Galette styles */
#listfilter {
	text-align: center;
	background-color: #DDDDFF;
	padding: 10px;
	margin:0 1em 1em 1em;
	-moz-border-radius: 10px 10px 10px 10px;
	-webkit-border-radius: 10px 10px 10px 10px;
	border-radius: 10px 10px 10px 10px;
}

#listfilter input[type="text"]{
    padding:0;
}

.selection_menu{
	margin:0;
	padding:0;
}
.selection_menu li{
	margin:0.2em 0;
    display: inline-block;
}
.selection_menu input.submit{
	margin:0;
	background:none;
	display:inline;
	cursor:pointer;
	border:none;
	font-weight:normal;
	padding-left:20px;
	text-align:left;
}

.selection_menu .exemple {
    font-weight: normal;
    font-size:0.9em;
}

.hasPicker{
    display: inline;
}

/* loading animation */
#loading {
    position:absolute;
    top:0;
    bottom:0;
    left: 0;
    right: 0;
    margin: 0;
    text-align: center;
    background-color:rgba(0, 0, 0, 0.5);
    z-index: 100000;
}
#loading p {
    position: absolute;
    top:40%;
    width: 20%;
    margin-left: 40%;
    background-color: rgba(255,255,255,.8);
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    padding: 1em 0;
    -moz-box-shadow: 1px 1px 12px rgba(255, 255, 255, 0.4);
    -webkitbox-shadow: 1px 1px 12px rgba(255, 255, 255, 0.4);
    box-shadow: 1px 1px 12px rgba(255, 255, 255, 0.4);
}

/* == Buttons */
#delete, #sendmail, #btnsave, #btnvalid, #btnadd, #btncancel, #btnsend, #btnpreview, #btnusers, .button {
    padding-left: 2em!important;
    background-position: 10px 50%, 50% 50%!important;
    background-repeat: no-repeat, repeat!important;
}
.button.notext {
    width: .5em;
    height: 2em;
}
.button.notext span {
    display: none;
}

#sendmail{
    background-image:url(images/icon-mail.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#sendmail.ui-state-hover {
    background-image:url(images/icon-mail.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

h1 #sendmail {
    display: inline-block;
    height: 25px;
    width: 35px;
    position: absolute;
    top:.1em;
    right: .5em;
    overflow: hidden;
    text-indent: 50px;
    padding:0!important;
}

h1 #sendmail .ui-button-text {
    display: none;
}

#delete{
    background-image: url(images/icon-trash.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#delete.ui-state-hover {
    background-image:url(images/icon-trash.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#subscribe {
	background-image:url(images/subscribe.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#subscribe.ui-state-hover {
    background-image:url(images/subscribe.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#lostpassword {
	background-image:url(images/lost_pass.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#lostpassword.ui-state-hover {
    background-image:url(images/lost_pass.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#memberslist {
	background-image:url(images/members-list.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#memberslist.ui-state-hover {
    background-image:url(images/members-list.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#trombino {
	background-image:url(images/trombino.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#trombino.ui-state-hover {
    background-image:url(images/trombino.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#backhome {
	background:url(images/home.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#backhome.ui-state-hover {
    background-image:url(images/home.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#logout {
	background-image:url(images/icon-quit.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#logout.ui-state-hover {
    background-image:url(images/icon-quit.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#btnadd {
	background-image:url(images/icon-add.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#btnadd.ui-state-hover {
    background-image:url(images/icon-add.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#btncancel {
	background-image:url(images/icon-cancel.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#btncancel.ui-state-hover {
    background-image:url(images/icon-cancel.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#btnsave {
	background-image:url(images/icon-save.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#btnsave.ui-state-hover {
    background-image:url(images/icon-save.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#btnvalid {
	background-image:url(images/icon-valid.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#btnvalid.ui-state-hover {
    background-image:url(images/icon-valid.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#btnback {
	background-image:url(images/prev.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#btnback.ui-state-hover {
    background-image:url(images/prev.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}

#btnpreview {
	background-image:url(images/icon-preview.png), url("jquery-ui/images/ui-bg_glass_75_e6e6e6_1x400.png");
}
#btnpreview.ui-state-hover {
    background-image:url(images/icon-preview.png), url("jquery-ui/images/ui-bg_glass_75_ffb619_1x400.png");
}
/* ... */

